# sms-irc

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml  config.toml.example  docker-compose.yml
.rpm/: sms-irc.spec
docker/: compose-config.toml  compose.sh  inspircd.env
migrations/20180621140749_initial/: down.sql  up.sql
migrations/20180729152102_whatsapp/: down.sql  up.sql
migrations/20180822195900_wabis/: down.sql  up.sql
migrations/2019-07-03-140351_wa_msgids/: down.sql  up.sql
migrations/2019-07-13-090924_notify/: down.sql  up.sql
migrations/2019-07-18-110836_proper-timestamps/: down.sql  up.sql
migrations/2019-09-14-115634_nicksrc/: down.sql  up.sql
migrations/20190217093945_avatars/: down.sql  up.sql
src/: admin.rs  comm.rs  config.rs  contact.rs  contact_common.rs  contact_factory.rs  control.rs  control_common.rs  insp_s2s.rs  insp_user.rs  irc_s2c.rs  irc_s2c_registration.rs  irc_s2c_v3.rs  logging.rs  main.rs  models.rs  modem.rs  schema.rs  sender_common.rs  store.rs  util.rs  whatsapp.rs  whatsapp_ack.rs  whatsapp_conn.rs  whatsapp_media.rs  whatsapp_msg.rs
